# HMcode-python

./: .gitignore  LICENSE  README.md  pyproject.toml
comparisons/: CAMB.py  CAMB_Feedback.py
hmcode/: __init__.py  camb_stuff.py  constants.py  cosmology.py  hmcode.py  linear_growth.py  utility.py
notebooks/: demo.ipynb  demo_baryons.ipynb  feedback.ipynb  minimal.ipynb
pyhmcode/: __init__.py  constants.py  cosmology.py  linear_growth.py  pyhmcode.py  utility.py
tests/: make_benchmarks.py  make_benchmarks_baryons.py  make_feedback_benchmarks.py  test.py  test_baryons.py  test_consistency.py  test_feedback.py
tests/benchmarks/: cosmologies.txt
tests/benchmarks_baryons/: cosmologies.txt
tests/notebooks/: HMcode.ipynb  HMx.ipynb  consistency.ipynb
