[tool.poetry]
name = "pyhmcode"
version = "1.0.0"
description = "Pure Python implementation of HMcode"
authors = ["Alexander Mead <alexander.j.mead@googlemail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.2"
scipy = "^1.10.1"
camb = "^1.4.0"
pyhalomodel = "^0.1.6"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.7.0"
ipykernel = "^6.21.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
