[tool.poetry]
name = "hmcode"
version = "1.1.1"
description = "Pure Python implementation of HMcode"
authors = ["Alexander Mead <alexander.j.mead@googlemail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/alexander-mead/HMcode-python"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.24.2"
scipy = "^1.10.1"
camb = "^1.4.0"
pyhalomodel = "^1.0.2"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.7.0"
ipykernel = "^6.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
